add span & all search cucumber tests