@@ -1,6 +1,5 @@
 package my.javacraft.elastic.cucumber.step;
 
-import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.cucumber.datatable.DataTable;
@@ -13,13 +12,13 @@ import my.javacraft.elastic.model.Client;
 import my.javacraft.elastic.model.SeekRequest;
 import org.apache.http.HttpHeaders;
 import org.junit.jupiter.api.Assertions;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Scope;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
@@ -32,9 +31,6 @@ public class SearchDefinition {
 
     @Value("${server.port}")
     int port;
-
-    @Autowired
-    ElasticsearchClient esClient;
 
     @When("wildcard search for {string} in {string}")
     public void testWildcard(String pattern, String type, DataTable dataTable) throws IOException, InterruptedException {
@@ -51,7 +47,7 @@ public class SearchDefinition {
 
         RestTemplate restTemplate = new RestTemplate();
 
-        HttpEntity<List<Object>> httpResponse = restTemplate.exchange(
+        ResponseEntity<List<LinkedHashMap<String, Object>>> httpResponse = restTemplate.exchange(
                 "http://localhost:%s/api/services/search/wildcard".formatted(port),
                 HttpMethod.POST,
                 entity,
@@ -61,7 +57,7 @@ public class SearchDefinition {
         Assertions.assertNotNull(httpResponse);
         Assertions.assertNotNull(httpResponse.getBody());
         Assertions.assertEquals(1, httpResponse.getBody().size());
-        LinkedHashMap map = (LinkedHashMap)httpResponse.getBody().getFirst();
+        LinkedHashMap<String, Object> map = httpResponse.getBody().getFirst();
         List<String> row = dataTable.cells().getFirst();
 
         Assertions.assertEquals(row.get(0), map.get("title"));
@@ -85,7 +81,7 @@ public class SearchDefinition {
 
         RestTemplate restTemplate = new RestTemplate();
 
-        HttpEntity<List<Object>> httpResponse = restTemplate.exchange(
+        ResponseEntity<List<LinkedHashMap<String, Object>>> httpResponse = restTemplate.exchange(
                 "http://localhost:%s/api/services/search/fuzzy".formatted(port),
                 HttpMethod.POST,
                 entity,
@@ -95,7 +91,75 @@ public class SearchDefinition {
         Assertions.assertNotNull(httpResponse);
         Assertions.assertNotNull(httpResponse.getBody());
         Assertions.assertEquals(1, httpResponse.getBody().size());
-        LinkedHashMap map = (LinkedHashMap)httpResponse.getBody().getFirst();
+        LinkedHashMap<String, Object> map = httpResponse.getBody().getFirst();
+        List<String> row = dataTable.cells().getFirst();
+
+        Assertions.assertEquals(row.get(0), map.get("title"));
+        Assertions.assertEquals(row.get(1), map.get("director"));
+        Assertions.assertEquals(Integer.parseInt(row.get(2)), map.get("release_year"));
+        Assertions.assertEquals(row.get(3), map.get("synopsis"));
+    }
+
+    @When("span search for {string} in {string}")
+    public void testSpan(String pattern, String type, DataTable dataTable) throws IOException, InterruptedException {
+        waitAsElasticSearchIsEventuallyConsistentDB();
+
+        String jsonBody = jsonBody(pattern, type);
+
+        log.info("created json:\n" + jsonBody);
+
+        MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
+        headers.set(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
+
+        HttpEntity<String> entity = new HttpEntity<>(jsonBody, headers);
+
+        RestTemplate restTemplate = new RestTemplate();
+
+        ResponseEntity<List<LinkedHashMap<String, Object>>> httpResponse = restTemplate.exchange(
+                "http://localhost:%s/api/services/search/span".formatted(port),
+                HttpMethod.POST,
+                entity,
+                new ParameterizedTypeReference<>() {
+                }
+        );
+        Assertions.assertNotNull(httpResponse);
+        Assertions.assertNotNull(httpResponse.getBody());
+        Assertions.assertEquals(1, httpResponse.getBody().size());
+        LinkedHashMap<String, Object> map = httpResponse.getBody().getFirst();
+        List<String> row = dataTable.cells().getFirst();
+
+        Assertions.assertEquals(row.get(0), map.get("title"));
+        Assertions.assertEquals(row.get(1), map.get("director"));
+        Assertions.assertEquals(Integer.parseInt(row.get(2)), map.get("release_year"));
+        Assertions.assertEquals(row.get(3), map.get("synopsis"));
+    }
+
+    @When("search for {string} in {string}")
+    public void testSearch(String pattern, String type, DataTable dataTable) throws IOException, InterruptedException {
+        waitAsElasticSearchIsEventuallyConsistentDB();
+
+        String jsonBody = jsonBody(pattern, type);
+
+        log.info("created json:\n" + jsonBody);
+
+        MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
+        headers.set(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
+
+        HttpEntity<String> entity = new HttpEntity<>(jsonBody, headers);
+
+        RestTemplate restTemplate = new RestTemplate();
+
+        ResponseEntity<List<LinkedHashMap<String, Object>>> httpResponse = restTemplate.exchange(
+                "http://localhost:%s/api/services/search".formatted(port),
+                HttpMethod.POST,
+                entity,
+                new ParameterizedTypeReference<>() {
+                }
+        );
+        Assertions.assertNotNull(httpResponse);
+        Assertions.assertNotNull(httpResponse.getBody());
+        Assertions.assertEquals(1, httpResponse.getBody().size());
+        LinkedHashMap<String, Object> map = httpResponse.getBody().getFirst();
         List<String> row = dataTable.cells().getFirst();
 
         Assertions.assertEquals(row.get(0), map.get("title"));
